Add Redis service to docker-compose and update dependencies

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,13 @@ services:
       - mongo-data:/data/db
     restart: unless-stopped
 
+    # THÊM SERVICE REDIS
+  redis:
+    image: redis:alpine
+    ports:
+      - "6379:6379"
+    restart: unless-stopped
+
 volumes:
   mongo-data:
     driver: local
