--- a/src/package.json
+++ b/src/package.json
@@ -23,6 +23,8 @@
     "mongoose": "^8.1.0",
     "nodemailer": "^6.9.8",
     "nodemon": "^3.1.4",
+    "quill-delta": "^5.1.0",
+    "redis": "^5.10.0",
     "socket.io": "^4.8.1"
   }
 }
