--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,33 @@ services:
       - mongo-data:/data/db
     restart: unless-stopped
 
+  # [THÊM] Dịch vụ Prometheus
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+    command:
+      - "--config.file=/etc/prometheus/prometheus.yml"
+    restart: unless-stopped
+
+  # [THÊM] Dịch vụ Grafana
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    volumes:
+      - grafana-data:/var/lib/grafana
+    environment:
+      - GF_SECURITY_ADMIN_PASSWORD=admin # Mật khẩu mặc định là admin
+    restart: unless-stopped
+
 volumes:
   mongo-data:
+    driver: local
+
+  grafana-data: # [THÊM] Volume cho Grafana
     driver: local
