--- a/src/package.json
+++ b/src/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^8.1.0",
     "nodemailer": "^6.9.8",
     "nodemon": "^3.1.4",
+    "prom-client": "^15.1.3",
     "socket.io": "^4.8.1"
   }
 }
