feat(gateway): initialize gateway service with Express and Socket.IO
- Added package.json for gateway service with dependencies on express and socket.io.
- Implemented server.js to set up an Express server with a simple API endpoint and Socket.IO for real-time communication.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,11 @@
 services:
+  # websocket gateway
+  ws-gateway:
+    build: ./src/gateway
+    ports:
+      - "8080"
+    restart: unless-stopped
+
   # Dịch vụ MongoDB
   mongo:
     image: mongo:latest
