feat: add WebSocket support with Yjs for real-time collaboration
- Updated package.json to include ws, y-websocket, and yjs dependencies.
- Refactored server.js to integrate Yjs for document synchronization.
- Added utility functions for managing Yjs documents and WebSocket connections in utils.js.
- Implemented awareness protocol to handle user presence in collaborative sessions.

--- a/src/package.json
+++ b/src/package.json
@@ -23,6 +23,9 @@
     "mongoose": "^8.1.0",
     "nodemailer": "^6.9.8",
     "nodemon": "^3.1.4",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "ws": "^8.18.3",
+    "y-websocket": "^3.0.0",
+    "yjs": "^13.6.27"
   }
 }
