--- a/src/client/package.json
+++ b/src/client/package.json
@@ -16,7 +16,11 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
     "react-toastify": "^10.0.3",
-    "socket.io-client": "^4.7.4"
+    "socket.io-client": "^4.7.4",
+    "y-protocols": "^1.0.6",
+    "y-quill": "^1.0.0",
+    "y-websocket": "^3.0.0",
+    "yjs": "^13.6.27"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
