feat: Refactor WebSocket server and integrate Yjs for real-time collaboration
- Updated package.json to include y-mongodb-provider and y-websocket dependencies.
- Replaced Socket.IO with WebSocketServer and Yjs for document synchronization.
- Implemented MongoDB persistence for Yjs documents.
- Enhanced Nginx Dockerfile to install dos2unix for script compatibility.
- Modified entrypoint.sh to improve backend node discovery logic.
- Redesigned test.html for a better user interface and integrated Yjs for real-time editing.
- Updated y-server.js to handle WebSocket connections and document persistence.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,10 @@ services:
     build: ./src/gateway
     ports:
       - "8080"
+    environment:
+      - WS_PORT=1234
+      - MONGODB_URI=mongodb://mongo:27017/collab_notes
+      - JWT_SECRET=my_super_secret_123
     networks:
       - app-network
 
@@ -15,7 +19,7 @@ services:
       - "443:443"
     environment:
       - APP_SERVICE_NAME=collab_notes-ws-gateway
-      - APP_PORT=8080
+      - APP_PORT=1234
     depends_on:
       - ws-gateway
     restart: unless-stopped
