--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,10 @@ services:
       - WS_PORT=1234
       - MONGODB_URI=mongodb://mongo:27017/collab_notes
       - JWT_SECRET=my_super_secret_123
+    depends_on:
+      - mongo
+      - kafka
+    restart: unless-stopped
     networks:
       - app-network
 
@@ -22,6 +26,10 @@ services:
       - APP_PORT=1234
     depends_on:
       - ws-gateway
+      - mongo
+      - redis
+      - kafka
+      - worker
     restart: unless-stopped
     networks:
       - app-network
@@ -34,13 +42,78 @@ services:
     volumes:
       - mongo-data:/data/db
     restart: unless-stopped
+    networks:
+      - app-network
 
-    # THÊM SERVICE REDIS
+  # Dịch vụ Worker xử lý nền
+  worker:
+    build: ./src/worker
+    # Không đặt container_name cố định vì chúng ta scale nhiều worker
+    deploy:
+      mode: replicated
+      replicas: 2 # Chạy thử 2 worker song song để xử lý nhanh hơn
+    environment:
+      - MONGODB_URI=mongodb://mongo:27017/collab_notes
+      - KAFKA_BROKER=kafka:29092
+    depends_on:
+      - mongo
+      - kafka
+    networks:
+      - app-network
+
+  # THÊM SERVICE REDIS
   redis:
     image: redis:alpine
     ports:
       - "6379:6379"
     restart: unless-stopped
+
+  zookeeper:
+    image: confluentinc/cp-zookeeper:7.5.0
+    hostname: zookeeper
+    container_name: zookeeper
+    ports:
+      - "2181:2181"
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+    networks:
+      - app-network
+
+  kafka:
+    image: confluentinc/cp-kafka:7.5.0
+    hostname: kafka
+    container_name: kafka
+    depends_on:
+      - zookeeper
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2181"
+      # Cấu hình quang trọng để kết nối từ bên ngoài (localhost) và bên trong Docker
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,PLAINTEXT_HOST://localhost:9092
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+    networks:
+      - app-network
+
+  kafka-ui:
+    image: provectuslabs/kafka-ui:latest
+    container_name: kafka-ui
+    depends_on:
+      - kafka
+    ports:
+      - "4000:8080"
+    environment:
+      KAFKA_CLUSTERS_0_NAME: local
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:29092
+      KAFKA_CLUSTERS_0_ZOOKEEPER: zookeeper:2181
+    networks:
+      - app-network
 
 volumes:
   mongo-data:
