--- a/src/worker/package.json
+++ b/src/worker/package.json
@@ -1,21 +1,18 @@
 {
-  "name": "gateway",
+  "name": "worker",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
-  "type": "module",
+  "main": "worker.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node worker.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0",
     "kafkajs": "^2.2.4",
-    "socket.io": "^4.8.1",
+    "mongodb": "^7.0.0",
     "y-mongodb-provider": "^0.2.1",
-    "y-websocket": "^1.5.0"
+    "yjs": "^13.6.27"
   }
 }
