--- a/src/package.json
+++ b/src/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.2",
     "express": "^4.21.2",
+    "http-proxy-middleware": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.0",
     "nodemailer": "^6.9.8",
