--- a/src/gateway/nginx.conf
+++ b/src/gateway/nginx.conf
@@ -1,5 +1,5 @@
 worker_processes auto;
-
+error_log /dev/stderr info;
 events { worker_connections 1024; }
 
 http {
@@ -13,6 +13,8 @@ http {
         jwt = require("resty.jwt")
         cjson = require("cjson")
     }
+    # Use Docker embedded DNS; re-resolve every 5s
+    resolver 127.0.0.11 valid=5s ipv6=off;
 
     upstream auth_service {
         server auth-service:5001;
@@ -21,13 +23,11 @@ http {
     upstream doc_service {
         server document-service:5002;
     }
-
-    upstream ws_service {
-        server websocket-service:5003;
-    }
-
+   
+    
     server {
         listen 80;
+        set $ws_target ""  ;  # for websocket dynamic target
 
         #######################################################################
         # PUBLIC: LOGIN  (NO JWT)
@@ -149,13 +149,17 @@ http {
 
         #######################################################################
         # PRIVATE: WEBSOCKET
+        # WEBSOCKET: sticky routing by roomId
+        # - resolve tasks.websocket-service via DNS
+        # - pick IP by CRC32(roomId) % N
+        # - proxy_pass directly to chosen IP:5003
         #######################################################################
         location /ws/socket.io/ {
 
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "Upgrade";
-
+         
             # CORS
             add_header Access-Control-Allow-Origin "http://localhost:5173" always;
             add_header Access-Control-Allow-Credentials true always;
@@ -170,22 +174,61 @@ http {
 
             # JWT verify
             set_by_lua_block $jwt_user_id {
-                local auth = ngx.req.get_headers()["Authorization"]
-                if not auth then return "" end
-                local token = auth:gsub("Bearer ", "")
+                local cookies = ngx.req.get_headers()["Cookie"] or ""
+                local token = cookies:match("token=([^;]+)")
+                ngx.log(ngx.ERR, "WebSocket - token from cookie: " .. (token or "nil"))
+                if not token then return "" end
                 local jwt_obj = jwt:verify("hao123", token)
                 if jwt_obj.verified then
+                ngx.log(ngx.ERR, "Gateway JWT verified for WS, userId: " .. jwt_obj.payload.id)
                     return jwt_obj.payload.id
                 else
+                ngx.log(ngx.ERR, "Invalid JWT")
+                
                     return ""
                 end
             }
-
+            
             proxy_set_header X-User-Id $jwt_user_id;
 
-            proxy_pass http://ws_service;
-        }
 
+           # Get roomId from query
+            set_by_lua_block $room_id {
+                local args = ngx.req.get_uri_args()
+                ngx.log(ngx.ERR, "roomId: " .. (args["roomId"] or "nil"))
+                return args["roomId"] or "default"
+            }
+
+            # Resolve WS peers dynamically
+            access_by_lua_block {
+                local resolver = require "resty.dns.resolver"
+                local r = resolver:new{ nameservers={"127.0.0.11:53"}, timeout=2000 }
+                local answers, err = r:query("tasks.websocket-service", {qtype=r.TYPE_A})
+                if not answers then
+                    ngx.log(ngx.ERR, "DNS query failed: ", err)
+                    return ngx.exit(502)
+                end
+                local peers = {}
+                for _, ans in ipairs(answers) do
+                    if ans.address then table.insert(peers, ans.address) end
+                end
+                if #peers == 0 then
+                    ngx.log(ngx.ERR, "No WS peers found")
+                    return ngx.exit(502)
+                end
+                table.sort(peers)
+                local crc32 = ngx.crc32_short
+                local idx = (crc32(ngx.var.room_id) % #peers) + 1
+                ngx.var.ws_target = peers[idx]
+                ngx.log(ngx.ERR, "Chosen WS peer: ", peers[idx])
+            }
+
+            proxy_pass http://$ws_target:5003;
+            proxy_connect_timeout 36s;
+            proxy_read_timeout 3600s;
+            proxy_send_timeout 10s;
+            proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
+        }
         #######################################################################
         # GLOBAL OPTIONS HANDLER  —  ALWAYS WORKS
         #######################################################################
