--- a/src/auth-service/package.json
+++ b/src/auth-service/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "doc-service",
+  "name": "auth-service",
   "version": "1.0.0",
   "type": "module",
   "main": "server.js",
@@ -8,11 +8,10 @@
     "dev": "node --watch server.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.3",
-    "y-mongodb-provider": "^0.1.8",
-    "yjs": "^13.6.27"
+    "mongoose": "^8.0.3"
   }
 }
