--- a/src/websocket-service/Dockerfile
+++ b/src/websocket-service/Dockerfile
@@ -1,7 +1,14 @@
-FROM node:20-alpine
-WORKDIR /app
+FROM node:18-alpine
+
+WORKDIR /usr/src/app
+
 COPY package*.json ./
-RUN npm install
+RUN npm install --omit=dev
+
 COPY . .
-EXPOSE 8080
-CMD ["node", "server.js"]
+
+ENV NODE_ENV=production
+
+EXPOSE 1234
+
+CMD ["npm", "start"]
