--- a/src/gateway/nginx.conf
+++ b/src/gateway/nginx.conf
@@ -21,15 +21,27 @@ http {
 
     server {
         listen 80;
+        
+        # CORS headers - add them at server level so all locations inherit
+        add_header 'Access-Control-Allow-Origin' 'http://localhost:5173' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, PATCH, DELETE, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization' always;
+        add_header 'Access-Control-Allow-Credentials' 'true' always;
+
+        # Handle OPTIONS (preflight) requests
+        if ($request_method = 'OPTIONS') {
+            return 204;
+        }
 
         # REST API - Auth
         location /api/v1/auth/ {
             proxy_pass http://auth_service;
         }
 
-        # REST API – Documents
-        location /api/v1/documents/ {
+        # REST API - Documents
+        location /api/v1/documents {
             proxy_pass http://doc_service;
+            proxy_redirect off;
         }
 
         # WebSocket
