--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,10 @@ services:
       - "29092:29092"
     environment:
       KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ZOOKEEPER_CONNECT:
+        zookeeper:2181
+        # Cực kỳ quan trọng:
+      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:29092
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092
 
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
@@ -47,7 +50,7 @@ services:
       - "host.docker.internal:host-gateway"
     environment:
       PORT: 3002
-      MONGO_URI: mongodb://host.docker.internal:27017/collab_notes
+      MONGODB_URI: mongodb+srv://nguyentronghieu2kk5_db_user:8OQlHdhPdUCHWxES@cluster0.ttgxlkn.mongodb.net/test?retryWrites=true&w=majority&appName=Cluster0
       JWT_SECRET: mysecret
       JWT_REFRESH_SECRET: myrefreshsecret
       TOKEN_EXPIRES_IN: 15m
@@ -67,8 +70,8 @@ services:
       - "host.docker.internal:host-gateway"
     environment:
       PORT: 3001
-      MONGO_URI: mongodb://host.docker.internal:27017/collab_notes
-
+      MONGODB_URI: mongodb+srv://nguyentronghieu2kk5_db_user:8OQlHdhPdUCHWxES@cluster0.ttgxlkn.mongodb.net/test?retryWrites=true&w=majority&appName=Cluster0
+      JWT_SECRET: mysecret
   # ---------------------------------------------------------
   # WEBSOCKET SERVICE
   # ---------------------------------------------------------
@@ -88,6 +91,8 @@ services:
       AUTH_SERVICE_URL: http://auth-service:3002
       DOC_SERVICE_URL: http://doc-service:3001
       KAFKA_BROKER: kafka:29092
+      JWT_SECRET: mysecret
+      MONGO_URL: mongodb+srv://nguyentronghieu2kk5_db_user:8OQlHdhPdUCHWxES@cluster0.ttgxlkn.mongodb.net/test?retryWrites=true&w=majority&appName=Cluster0
 
   # ---------------------------------------------------------
   # WORKER SERVICE
@@ -104,7 +109,7 @@ services:
       - "host.docker.internal:host-gateway"
     environment:
       KAFKA_BROKER: kafka:29092
-      MONGODB_URI: mongodb://host.docker.internal:27017/collab_notes
+      MONGODB_URI: mongodb+srv://nguyentronghieu2kk5_db_user:8OQlHdhPdUCHWxES@cluster0.ttgxlkn.mongodb.net/test?retryWrites=true&w=majority&appName=Cluster0
       TOPIC_NAME: yjs-updates
 
   # ---------------------------------------------------------
@@ -121,3 +126,15 @@ services:
       - "80:80"
     volumes:
       - ./src/gateway/nginx.conf:/etc/nginx/nginx.conf:ro
+  client:
+    build:
+      context: ./src/client
+    container_name: client
+    restart: always
+    environment:
+      - VITE_APP_BACKEND_URL=http://localhost:80/api/v1
+      - VITE_APP_SOCKET_URL=http://localhost:80
+    ports:
+      - "5173:5173"
+    depends_on:
+      - gateway
