fix: update y-websocket version and adjust WebSocket URL in config
refactor: streamline document helper functions for better readability

feat: add getDocumentTitle function to fetch document title by ID

fix: modify auth middleware to utilize headers from gateway for user validation

feat: implement getDocumentTitle route in document service

chore: enhance nginx configuration for CORS and internal auth verification

fix: update WebSocket authentication to verify via auth-service

refactor: improve WebSocket server structure and connection handling

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,10 +59,10 @@ services:
     environment:
       PORT: 3002
       MONGODB_URI: mongodb://mongo:27017/collab_notes
-      JWT_SECRET: mysecret
-      JWT_REFRESH_SECRET: myrefreshsecret
-      TOKEN_EXPIRES_IN: 12h
-      REFRESH_EXPIRES_IN: 7d
+      ACCESS_TOKEN_SECRET: mysecret
+      REFRESH_TOKEN_SECRET: mysecret
+      ACCESS_TOKEN_EXPIRES_IN: 12h
+      REFRESH_TOKEN_EXPIRES_IN: 7d
 
   # ---------------------------------------------------------
   # DOC SERVICE
@@ -79,7 +79,7 @@ services:
     environment:
       PORT: 3001
       MONGODB_URI: mongodb://mongo:27017/collab_notes
-      JWT_SECRET: mysecret
+      ACCESS_TOKEN_SECRET: mysecret
 
   # ---------------------------------------------------------
   # WEBSOCKET SERVICE (có thể scale)
@@ -98,8 +98,7 @@ services:
       AUTH_SERVICE_URL: http://auth-service:3002
       DOC_SERVICE_URL: http://doc-service:3001
       KAFKA_BROKER: kafka:29092
-      JWT_SECRET: mysecret
-      MONGO_URL: mongodb://mongo:27017/collab_notes
+      ACCESS_TOKEN_SECRET: mysecret
 
   # ---------------------------------------------------------
   # WORKER SERVICE
