--- a/src/client/Dockerfile
+++ b/src/client/Dockerfile
@@ -1,10 +1,13 @@
-FROM node:18-alpine
-WORKDIR /frontend
+FROM node:20-alpine
+
+WORKDIR /app
 
 COPY package*.json ./
+
 RUN npm install
 
 COPY . .
 
 EXPOSE 5173
+
 CMD ["npm", "run", "dev", "--", "--host"]
